--- a/.github/workflows/create_draft_release.yaml
+++ b/.github/workflows/create_draft_release.yaml
@@ -45,9 +45,10 @@ jobs:
 
       - name: Create draft GitHub Release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: "v${{ steps.version.outputs.version }}"
           release_name: "v${{ steps.version.outputs.version }}"
           draft: true
           prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
