--- a/custom_components/froeling_lambdatronic_modbus/manifest.json
+++ b/custom_components/froeling_lambdatronic_modbus/manifest.json
@@ -11,7 +11,7 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/GyroGearl00se/ha_froeling_lambdatronic_modbus/issues",
   "requirements": [
-    "pymodbus>=3.0"
+    "pymodbus==3.11.2"
   ],
-  "version": "1.3.2"
+  "version": "2.0.0"
 }
