--- a/custom_components/froeling_lambdatronic_modbus/manifest.json
+++ b/custom_components/froeling_lambdatronic_modbus/manifest.json
@@ -1,17 +1,13 @@
 {
   "domain": "froeling_lambdatronic_modbus",
   "name": "Froeling Lambdatronic Modbus",
-  "codeowners": [
-    "@GyroGearl00se"
-  ],
+  "codeowners": ["@GyroGearl00se"],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/GyroGearl00se/ha_froeling_lambdatronic_modbus",
   "integration_type": "hub",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/GyroGearl00se/ha_froeling_lambdatronic_modbus/issues",
-  "requirements": [
-    "pymodbus>=3.11.1"
-  ],
-  "version": "2.0.2"
+  "requirements": ["pymodbus>=3.11.1"],
+  "version": "2.0.4"
 }
